<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AuthActivity</string>
    <string name="Home">home</string>
    <string name="castom_name">TextInputLayout</string>
    <string name="koshumcha">Добро пожаловать в приложение Koshumcha</string>
    <string name="Русский">Русский</string>
    <string name="Кыргызча">Кыргызча</string>
    <string name="English">English</string>

    <string name="next">Далее</string>
    <string name="next_button">Начать</string>
    <string name="settings">Еще</string>
    <string name="ststistic">Аналитика</string>
    <string name="contacts">Мои контакты</string>
    <string name="add">add</string>
    <string name="title">Записывайте кому и сколько вы подарили</string>
    <string name="subtitle">Мы считаем, что отношения должны основываться на доверии и честности.</string>
    <string name="title2">Дарите столько, сколько подарили вам</string>
    <string name="subtitle2">В приложении вы легко найдете вашего близкого человека и его сумму подарка</string>
    <string name="title3">Воспользуйтесь удобной аналитекой</string>
    <string name="subtitle3">Вы сможете посмотреть приход и расход денег по праздникам или за период</string>
    <string name="currency">Выбор валюты</string>
    <string name="title_carency">Выберите основную валюту для приложения, валюту можно поменять в любой момент.</string>
    <string name="dollar">Доллар США ($)</string>
    <string name="euro">Евро (€)</string>
    <string name="salary">Ваша зарплата ($)</string>
    <string name="income">Другие источники дохода ($)</string>
    <string name="subtitle_currency">Данные о зарплате и источниках дохода будут использоваться только для рассчета в разделе аналитика</string>
    <string name="som">Кыргызский сом (с)</string>
    <string name="russ">Рубль (₽)</string>
    <string name="Skip">Пропустить</string>
    <string name="new_present">Новый $ подарок</string>
    <string name="category">Категория</string>
    <string name="amount">Сумма</string>
    <string name="save">Создать</string>
    <string name="choose">Выберите язык приложения</string>
    <string name="ok">Сохранить</string>
    <string name="no">Отмена</string>
    <string name="add_name">add Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Настройки</string>
    <string name="curren">Валюта/Зарплата</string>
    <string name="lang">Язык</string>
    <string name="category_created">Категория успешно добавлена</string>
    <string name="name_created">имя успешно добавлена</string>

    <string name="radio_name" translatable="false">RadioButtonInKotlin</string>
    <string name="checked" translatable="false">checked</string>
    <string name="unchecked" translatable="false">unchecked</string>
</resources>
