<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:id="@+id/main">

    <Button
        android:id="@+id/arrow_btn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_arrow_left"
        android:layout_marginTop="44dp"
        android:layout_marginStart="18dp"/>

    <TextView
        android:id="@+id/lang_tv"
        android:layout_width="272dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="@id/arrow_btn"
        app:layout_constraintStart_toEndOf="@id/arrow_btn"
        android:text="@string/currency"
        android:textSize="22sp"
        android:fontFamily="@font/bold"
        android:textColor="@color/Label_Primary"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="62dp"/>

    <TextView
        android:id="@+id/lang_sub"
        android:layout_width="308dp"
        android:layout_height="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lang_tv"
        android:text="@string/title_carency"
        android:textSize="14sp"
        android:fontFamily="@font/roboo"
        android:textColor="@color/grey_40"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="16dp"/>

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lang_sub"
        android:onClick="RadioButtonClicked"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="18dp">

        <RadioButton
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dollar"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/som"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="12dp"/>

        <RadioButton
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/russ"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="12dp"/>

        <RadioButton
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/euro"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="12dp"/>
    </RadioGroup>

    <View
        android:id="@+id/gray_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        android:background="@color/grey_10"
        app:layout_constraintTop_toBottomOf="@id/radio" />

    <TextView
        android:id="@+id/amount_tv"
        android:layout_width="292dp"
        android:layout_height="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio"
        android:text="@string/salary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/Label_Primary"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="52dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/amount_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gray_line"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"/>

    <View
        android:id="@+id/gray_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey_10"
        app:layout_constraintTop_toBottomOf="@id/amount_textView"/>

    <TextView
        android:id="@+id/income"
        android:layout_width="292dp"
        android:layout_height="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gray_line2"
        android:text="@string/income"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/Label_Primary"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="52dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/income_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gray_line2"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"/>

    <View
        android:id="@+id/gray_line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="65dp"
        android:background="@color/grey_10"
        app:layout_constraintTop_toBottomOf="@id/gray_line2"/>

    <TextView
        android:id="@+id/lang_sub2"
        android:layout_width="296dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gray_line3"
        android:text="@string/subtitle_currency"
        android:textSize="14sp"
        android:fontFamily="@font/roboo"
        android:textColor="@color/grey_40"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="15dp"/>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="320dp"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_next"
        android:text="@string/next_button"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>