<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/arrow_btn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_arrow_left"
        android:layout_marginTop="44dp"
        android:layout_marginStart="18dp"/>

    <TextView
        android:id="@+id/settings"
        android:layout_width="272dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="@id/arrow_btn"
        app:layout_constraintStart_toEndOf="@id/arrow_btn"
        android:text="@string/setting"
        android:textSize="22sp"
        android:fontFamily="@font/bold"
        android:textColor="@color/Label_Primary"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="62dp"/>

    <TextView
        android:id="@+id/currency"
        android:layout_width="292dp"
        android:layout_height="24dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        android:text="@string/curren"
        android:textColor="@color/Label_Primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <ImageButton
        android:id="@+id/iv_currency"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="328dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_forward"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/gray_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        android:background="@color/grey_10"
        app:layout_constraintTop_toBottomOf="@id/currency" />

    <TextView
        android:id="@+id/lang"
        android:layout_width="292dp"
        android:layout_height="24dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:text="@string/lang"
        android:textColor="@color/Label_Primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gray_line" />

    <View
        android:id="@+id/gray_line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        android:background="@color/grey_10"
        app:layout_constraintTop_toBottomOf="@id/lang" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>