<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <Button
        android:id="@+id/arrow_btn"
        android:layout_width="16dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_arrow_left"
        android:layout_marginTop="44dp"
        android:layout_marginStart="18dp"/>

    <TextView
        android:id="@+id/lang_tv"
        android:layout_width="272dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="@id/arrow_btn"
        app:layout_constraintStart_toEndOf="@id/arrow_btn"
        android:text="@string/new_present"
        android:textSize="22sp"
        android:fontFamily="@font/bold"
        android:textColor="@color/Label_Primary"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="62dp"/>

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lang_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp">

        <RadioButton
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Дарю"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Принимаю"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="12dp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        app:layout_constraintTop_toBottomOf="@+id/radio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Имя"
        android:textSize="14sp"
        android:layout_marginTop="22dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/Subhead"/>

    <LinearLayout
        android:id="@+id/spinner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/gray_spinner">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_alignBottom="@id/name"/>

    </LinearLayout>

    <TextView
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/category"
        android:textSize="14sp"
        android:layout_marginTop="26dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/Subhead"/>

    <LinearLayout
        android:id="@+id/spinner_layout_category"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/gray_spinner">

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_alignBottom="@id/name"/>

    </LinearLayout>

    <TextView
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner_layout_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/amount"
        android:textSize="14sp"
        android:layout_marginTop="26dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/Subhead"/>

    <EditText
        android:id="@+id/amount_et"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="number"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="0"/>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="320dp"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_et"
        android:background="@drawable/btn_save"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>